Fix animation & background jumpiness

--- a/src/app/styles/components.module.css
+++ b/src/app/styles/components.module.css
@@ -1,13 +1,20 @@
 .header,
 .footer {
   display: flex;
-  max-width: calc(100dvw - 100px);
   height: 50px;
-  padding: 25px 50px;
-  overflow: auto hidden;
   align-items: center;
   gap: 50px;
   flex: 0 0 auto;
+}
+.header {
+  max-width: calc(100dvw - 100px);
+  padding: 25px 50px;
+  overflow: auto hidden;
+}
+.footer {
+  max-width: 100dvw;
+  padding: 25px 0px;
+  overflow: hidden;
 }
 .dot {
   background-color: #fff;
@@ -78,4 +85,35 @@
   font-size: 16pt;
   line-height: 16pt;
   opacity: 0.6;
+}
+
+/* SLIM */
+@media only screen and (max-width: 800px) {
+  .full {
+    display: none;
+  }
+  .slim {
+    display: inherit;
+  }
+  .header {
+    max-width: calc(100dvw - 80px);
+    height: 50px;
+    padding: 20px 40px;
+    gap: 25px;
+  }
+}
+
+/* TINY (width) */
+@media only screen and (max-width: 400px) {
+  .footer {
+    gap: 12.5dvw;
+  }
+  .text-spacer {
+    height: 5dvw;
+  }
+  .textType {
+    height: 5dvw;
+    font-size: 5dvw;
+    line-height: 5dvw;
+  }
 }
