--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -1,10 +1,15 @@
+html,
 body {
+  overflow: hidden;
+}
+
+body {
+  position: relative;
   background-color: #000;
   margin: 0px;
   padding: 0px;
   width: 100dvw;
   height: 100dvh;
-  overflow: hidden;
   font-size: 16pt;
 }
 
@@ -100,11 +105,20 @@ body {
 .slim {
   display: none;
 }
+
+/* SLIM */
 @media only screen and (max-width: 800px) {
   .full {
     display: none;
   }
   .slim {
     display: inherit;
+  }
+}
+
+/* TINY (width) */
+@media only screen and (max-width: 400px) {
+  .text-spacer {
+    height: 6dvw;
   }
 }
